SFDCProject/src/objects/RM_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Pre Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Activity__c</controllingField>
            <picklistValues>
                <fullName>Custom Fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Site Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist Values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worflow Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layouts and Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sites Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Onboarding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Set_Name__c</fullName>
        <label>Change Set Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_date__c</fullName>
        <label>Deployment date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netexam Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One time payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic monthly payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release_Management_Record__c</fullName>
        <label>Release Management Record Name</label>
        <referenceTo>Release_Management_Record__c</referenceTo>
        <relationshipLabel>RM Details</relationshipLabel>
        <relationshipName>RM_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>RM Detail</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>RM Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RM Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>